--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -57,3 +57,29 @@ textarea {
     scroll-behavior: auto !important;
   }
 }
+
+.icon--logo-bookmark {
+  width: 128px;
+  height: 25px;
+}
+
+.icon--bg-dots {
+  width: 280px;
+  height: 4px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.overlay.open {
+  opacity: 1;
+  pointer-events: all;
+}
