--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -22,8 +22,11 @@ $breakpoints: (
   --clr-primary: hsl(231, 69%, 60%);
   --clr-secondary: hsl(0, 94%, 66%);
 
+  --clr-neutral-300: hsl(0, 0%, 97%);
   --clr-neutral-400: hsl(229, 8%, 60%);
   --clr-neutral-500: hsl(229, 31%, 21%);
 
   --box-shadow: 0 2px 16px rgba(0, 0, 0, 0.15);
+
+  --br: 5px;
 }
