--- a/src/index.njk
+++ b/src/index.njk
@@ -21,10 +21,10 @@ layout: base
   </div>
 </div>
 
-<header class="header">
+<header class="header split container">
   <div class="logo">{% icon "logo-bookmark" %}</div>
 
-  <nav class="primary-nav">
+  <nav class="primary-nav hidden">
     <ul role="list">
       <li><a href="#features">features</a></li>
       <li><a href="#pricing">pricing</a></li>
@@ -35,16 +35,16 @@ layout: base
   <div>{% icon "icon-hamburger" %}</div>
 </header>
 
-<section class="hero">
-  <div class="text-box">
+<section class="hero container split">
+  <div class="text-box flow">
     <h1>A Simple Bookmark Manager</h1>
     <p>
       A clean and simple interface to organize your favourite websites. Open a
       new browser tab and see your sites load instantly. Try it for free.
     </p>
-    <div>
-      <a href="#" class="btn">Get it on Chrome</a>
-      <a href="#" class="btn">Get it on Firefox</a>
+    <div class="split cta-buttons">
+      <a href="#" class="btn btn-blue">Get it on Chrome</a>
+      <a href="#" class="btn btn-white">Get it on Firefox</a>
     </div>
   </div>
   <div class="illustration">
@@ -53,7 +53,7 @@ layout: base
   </div>
 </section>
 
-<section class="features">
+<section class="features container flow">
   <h2>Features</h2>
   <p>
     Our aim is to make it quick and easy for you to access your favourite
@@ -96,7 +96,7 @@ layout: base
         />
         <div class="illustration-background"></div>
       </div>
-      <div class="text-box">
+      <div class="text-box flow">
         <h3>Bookmark in one click</h3>
         <p>
           Organize your bookmarks however you like. Our simple drag-and-drop
@@ -114,7 +114,7 @@ layout: base
         />
         <div class="illustration-background"></div>
       </div>
-      <div class="text-box">
+      <div class="text-box flow">
         <h3>Intelligent Search</h3>
         <p>
           Our powerful search feature will help you find saved sites in no time
@@ -131,7 +131,7 @@ layout: base
         />
         <div class="illustration-background"></div>
       </div>
-      <div class="text-box">
+      <div class="text-box flow">
         <h3>Share your bookmarks</h3>
         <p>
           Easily share your bookmarks and collections with others. Create a
@@ -143,7 +143,7 @@ layout: base
   </div>
 </section>
 
-<section class="cta">
+<section class="cta container">
   <h2>Download the extension</h2>
   <p>
     We’ve got more browsers in the pipeline. Please do let us know if you’ve got
@@ -152,33 +152,31 @@ layout: base
 
   <div>
     {% for cta in ctaCards %}
-    <div class="card">
+    <div class="card flow">
       <img src="{{ cta.image }}" alt="{{ cta.name }}" />
       Add to {{ cta.name }}
       <div>{% icon "bg-dots" %}</div>
-      <a href="#" class="btn">Add & install Extension</a>
+      <a href="#" class="btn btn-blue">Add & install Extension</a>
     </div>
     {% endfor %}
   </div>
 </section>
 
-<section class="faq">
+<section class="faq container">
   <h2>Frequently Asked Questions</h2>
   <p>
     Here are some of our FAQs. If you have any other questions you’d like
     answered please feel free to email us.
   </p>
 
-  <div class="questions">
-    <button class="btn">What is Bookmark {% icon "icon-arrow" %}</button>
+  <div class="questions flow">
+    <button>What is Bookmark {% icon "icon-arrow" %}</button>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt
       justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare
       mattis.
     </p>
-    <button class="btn">
-      How can i request a new browser? {% icon "icon-arrow" %}
-    </button>
+    <button>How can i request a new browser? {% icon "icon-arrow" %}</button>
     <p>
       Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
       ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet
@@ -186,29 +184,27 @@ layout: base
       imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue
       massa, ultricies non ligula. Suspendisse imperdiet.
     </p>
-    <button class="btn">Is there a mobile app? {% icon "icon-arrow" %}</button>
+    <button>Is there a mobile app? {% icon "icon-arrow" %}</button>
     <p>
       Sed consectetur quam id neque fermentum accumsan. Praesent luctus
       vestibulum dolor, ut condimentum urna vulputate eget. Cras in ligula quis
       est pharetra mattis sit amet pharetra purus. Sed sollicitudin ex et
       ultricies bibendum.
     </p>
-    <button class="btn">
-      What about other chromium browsers? {% icon "icon-arrow" %}
-    </button>
+    <button>What about other chromium browsers? {% icon "icon-arrow" %}</button>
     <p>
       Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at
       euismod dui. Aliquam vitae neque eget nisl gravida pellentesque non ut
       velit.
     </p>
   </div>
-  <a href="#" class="btn">More Info</a>
+  <a href="#">More Info</a>
 </section>
 
-<section class="contact">
+<section class="contact container flow">
   <p>35,000+ already joined</p>
   <h2>Stay up-to-date with what we’re doing</h2>
-  <form action="">
+  <form action="" class="flow">
     <label class="sr-only" for="email">Email</label>
     <input
       type="email"
@@ -222,7 +218,7 @@ layout: base
   </form>
 </section>
 
-<section class="socials">
+<section class="socials container">
   <div class="logo">{% icon "logo-bookmark" %}</div>
 
   <nav class="secondary -nav">
