--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -16,6 +16,9 @@ $breakpoints: (
 :root {
   --ff-ss: "Rubik", sans-serif;
 
+  --fs-400: 1.125rem;
+  --fs-800: 3rem;
+
   --fw-400: 400;
   --fw-500: 500;
 
