--- a/src/index.njk
+++ b/src/index.njk
@@ -32,7 +32,10 @@ layout: base
       <li><a class="btn" href="#">Login</a></li>
     </ul>
   </nav>
-  <div>{% icon "icon-hamburger" %}</div>
+  <button class="open-nav-button">
+    <span class="sr-only">Open mobile navigation</span>
+    {% icon "icon-hamburger" %}
+  </button>
 </header>
 
 <section class="hero container split">
@@ -43,13 +46,14 @@ layout: base
       new browser tab and see your sites load instantly. Try it for free.
     </p>
     <div class="split cta-buttons">
-      <a href="#" class="btn btn-blue">Get it on Chrome</a>
-      <a href="#" class="btn btn-white">Get it on Firefox</a>
+      <a href="#" class="btn bg-blue">Get it on Chrome</a>
+      <a href="#" class="btn bg-white">Get it on Firefox</a>
     </div>
   </div>
   <div class="illustration">
-    <img src="./assets/images/illustration-hero.svg" alt="pc desktop" />
-    <div class="illustration-background"></div>
+    <div>
+      <img src="./assets/images/illustration-hero.svg" alt="pc desktop" />
+    </div>
   </div>
 </section>
 
@@ -61,9 +65,10 @@ layout: base
     the go.
   </p>
 
-  <div class="tabs">
-    <div role="tablist" aria-label="Feature Tabs">
+  <div class="tabs flow">
+    <div class="tab-buttons split" role="tablist" aria-label="Feature Tabs">
       <button
+        class="active"
         aria-selected="true"
         aria-controls="panel-1"
         id="tab-1"
@@ -88,13 +93,20 @@ layout: base
         Easy Sharing
       </button>
     </div>
-    <div id="panel-1" role="tabpanel" tabindex="0" aria-labelledby="tab-1">
+    <div
+      class="panel"
+      id="panel-1"
+      role="tabpanel"
+      tabindex="0"
+      aria-labelledby="tab-1"
+    >
       <div class="illustration">
-        <img
-          src="./assets/images/illustration-features-tab-1.svg"
-          alt="pc desktop"
-        />
-        <div class="illustration-background"></div>
+        <div>
+          <img
+            src="./assets/images/illustration-features-tab-1.svg"
+            alt="pc desktop"
+          />
+        </div>
       </div>
       <div class="text-box flow">
         <h3>Bookmark in one click</h3>
@@ -103,16 +115,23 @@ layout: base
           interface gives you complete control over how you manage your
           favourite sites.
         </p>
-        <a href="#" class="btn">More Info</a>
+        <a href="#" class="btn bg-blue">More Info</a>
       </div>
     </div>
-    <div id="panel-2" role="tabpanel" tabindex="0" aria-labelledby="tab-2">
+    <div
+      class="panel"
+      id="panel-2"
+      role="tabpanel"
+      tabindex="0"
+      aria-labelledby="tab-2"
+    >
       <div class="illustration">
-        <img
-          src="./assets/images/illustration-features-tab-2.svg"
-          alt="pc desktop"
-        />
-        <div class="illustration-background"></div>
+        <div>
+          <img
+            src="./assets/images/illustration-features-tab-2.svg"
+            alt="pc desktop"
+          />
+        </div>
       </div>
       <div class="text-box flow">
         <h3>Intelligent Search</h3>
@@ -120,16 +139,23 @@ layout: base
           Our powerful search feature will help you find saved sites in no time
           at all. No need to trawl through all of your bookmarks.
         </p>
-        <a href="#" class="btn">More Info</a>
+        <a href="#" class="btn bg-blue">More Info</a>
       </div>
     </div>
-    <div id="panel-3" role="tabpanel" tabindex="0" aria-labelledby="tab-3">
+    <div
+      class="panel"
+      id="panel-3"
+      role="tabpanel"
+      tabindex="0"
+      aria-labelledby="tab-3"
+    >
       <div class="illustration">
-        <img
-          src="./assets/images/illustration-features-tab-3.svg"
-          alt="pc desktop"
-        />
-        <div class="illustration-background"></div>
+        <div>
+          <img
+            src="./assets/images/illustration-features-tab-3.svg"
+            alt="pc desktop"
+          />
+        </div>
       </div>
       <div class="text-box flow">
         <h3>Share your bookmarks</h3>
@@ -137,26 +163,31 @@ layout: base
           Easily share your bookmarks and collections with others. Create a
           shareable link that you can send at the click of a button.
         </p>
-        <a href="#" class="btn">More Info</a>
+        <a href="#" class="btn bg-blue">More Info</a>
       </div>
     </div>
   </div>
 </section>
 
-<section class="cta container">
-  <h2>Download the extension</h2>
-  <p>
-    We’ve got more browsers in the pipeline. Please do let us know if you’ve got
-    a favourite you’d like us to prioritize.
-  </p>
+<section class="cta container flow">
+  <header class="flow">
+    <h2>Download the extension</h2>
+    <p>
+      We’ve got more browsers in the pipeline. Please do let us know if you’ve
+      got a favourite you’d like us to prioritize.
+    </p>
+  </header>
 
-  <div>
+  <div class="cards flow">
     {% for cta in ctaCards %}
     <div class="card flow">
       <img src="{{ cta.image }}" alt="{{ cta.name }}" />
-      Add to {{ cta.name }}
+      <div class="info">
+        <span> Add to {{ cta.name }} </span>
+        <span>Minimum version {{ cta.version }}</span>
+      </div>
       <div>{% icon "bg-dots" %}</div>
-      <a href="#" class="btn btn-blue">Add & install Extension</a>
+      <a href="#" class="btn bg-blue">Add & install Extension</a>
     </div>
     {% endfor %}
   </div>
@@ -170,7 +201,9 @@ layout: base
   </p>
 
   <div class="questions flow">
-    <button>What is Bookmark {% icon "icon-arrow" %}</button>
+    <button>
+      What is Bookmark <span class="icon">{% icon "icon-arrow" %}</span>
+    </button>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt
       justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare
@@ -198,13 +231,13 @@ layout: base
       velit.
     </p>
   </div>
-  <a href="#">More Info</a>
+  <a class="btn bg-blue" href="#">More Info</a>
 </section>
 
-<section class="contact container flow">
+<section class="contact container flow bg-blue">
   <p>35,000+ already joined</p>
   <h2>Stay up-to-date with what we’re doing</h2>
-  <form action="" class="flow">
+  <form class="contact-form" action="" class="flow">
     <label class="sr-only" for="email">Email</label>
     <input
       type="email"
@@ -212,17 +245,35 @@ layout: base
       id="email"
       placeholder="example@email.com"
       required
+      class="error"
     />
-    <p class="error">Whoops, make sure it is email</p>
-    <button type="submit" class="btn">Contact Us</button>
+    <p class="error-message bg-red">Whoops, make sure it is email</p>
+    <button type="submit" class="btn bg-red">Contact Us</button>
   </form>
 </section>
 
-<section class="socials container">
-  <div class="logo">{% icon "logo-bookmark" %}</div>
+<footer class="socials container bg-dark footer flow">
+  <div class="logo">
+    <svg width="148" height="25" xmlns="http://www.w3.org/2000/svg">
+      <g fill="none" fill-rule="evenodd">
+        <path
+          d="M37 6.299h5.227c.746 0 1.434.155 2.062.466.629.311 1.123.735 1.484 1.27s.542 1.12.542 1.754c0 .672-.165 1.254-.495 1.746-.33.491-.762.868-1.297 1.129v.15c.697.248 1.25.643 1.661 1.185.41.541.616 1.191.616 1.95 0 .735-.196 1.385-.588 1.951a3.817 3.817 0 0 1-1.587 1.307c-.665.305-1.403.457-2.212.457H37V6.299zm5.04 5.45c.548 0 .986-.152 1.316-.457.33-.305.495-.688.495-1.148 0-.448-.159-.824-.476-1.13-.318-.304-.738-.457-1.26-.457H39.52v3.192h2.52zm.28 5.619c.61 0 1.086-.159 1.428-.476.342-.317.513-.731.513-1.241 0-.51-.174-.927-.522-1.251-.349-.324-.847-.485-1.494-.485H39.52v3.453h2.8zm12.927 2.595c-1.307 0-2.492-.308-3.556-.924a6.711 6.711 0 0 1-2.511-2.53c-.61-1.07-.915-2.246-.915-3.528 0-1.281.305-2.457.915-3.528a6.711 6.711 0 0 1 2.51-2.529C52.756 6.308 53.94 6 55.248 6c1.306 0 2.492.308 3.556.924a6.711 6.711 0 0 1 2.51 2.53c.61 1.07.915 2.246.915 3.527 0 1.282-.305 2.458-.915 3.528a6.711 6.711 0 0 1-2.51 2.53c-1.064.616-2.25.924-3.556.924zm0-2.39a4.52 4.52 0 0 0 2.258-.578 4.177 4.177 0 0 0 1.615-1.624c.392-.697.588-1.494.588-2.39 0-.896-.196-1.692-.588-2.389a4.177 4.177 0 0 0-1.615-1.624 4.52 4.52 0 0 0-2.258-.579 4.47 4.47 0 0 0-2.25.579 4.195 4.195 0 0 0-1.605 1.624c-.392.697-.588 1.493-.588 2.39 0 .895.196 1.692.588 2.389a4.195 4.195 0 0 0 1.605 1.624 4.47 4.47 0 0 0 2.25.578zm15.353 2.39c-1.307 0-2.492-.308-3.556-.924a6.711 6.711 0 0 1-2.51-2.53c-.61-1.07-.915-2.246-.915-3.528 0-1.281.305-2.457.914-3.528a6.711 6.711 0 0 1 2.511-2.529C68.108 6.308 69.294 6 70.6 6c1.307 0 2.492.308 3.556.924a6.711 6.711 0 0 1 2.51 2.53c.61 1.07.915 2.246.915 3.527 0 1.282-.305 2.458-.914 3.528a6.711 6.711 0 0 1-2.511 2.53c-1.064.616-2.25.924-3.556.924zm0-2.39a4.52 4.52 0 0 0 2.259-.578 4.177 4.177 0 0 0 1.614-1.624c.392-.697.588-1.494.588-2.39 0-.896-.196-1.692-.588-2.389a4.177 4.177 0 0 0-1.614-1.624 4.52 4.52 0 0 0-2.259-.579 4.47 4.47 0 0 0-2.25.579 4.195 4.195 0 0 0-1.605 1.624c-.392.697-.588 1.493-.588 2.39 0 .895.196 1.692.588 2.389a4.195 4.195 0 0 0 1.606 1.624 4.47 4.47 0 0 0 2.249.578zM79.83 6.3h2.52v5.73h.15l4.89-5.73h3.043v.149L85.6 11.973l5.338 7.542v.149h-3.08l-3.994-5.693-1.512 1.773v3.92h-2.52V6.299zM93.779 6h3.248l3.546 9.39h.15L104.268 6h3.267v13.365h-2.501v-6.589l.15-2.221h-.15l-3.398 8.81h-1.96l-3.416-8.81h-.149l.15 2.221v6.59h-2.483V6zm20.8 0h2.894l5.021 13.365h-2.781l-1.12-3.192h-5.115l-1.12 3.192h-2.781L114.579 6zm3.193 7.859l-1.176-3.36-.486-1.606h-.149l-.485 1.606-1.195 3.36h3.49zM124.553 6h4.872c.871 0 1.646.18 2.324.541.678.361 1.204.862 1.577 1.503.374.64.56 1.366.56 2.175 0 .858-.27 1.62-.812 2.286a4.617 4.617 0 0 1-2.044 1.447l-.018.13 3.584 5.134v.15h-2.894l-3.453-5.022h-1.176v5.021h-2.52V6zm4.853 6.03c.573 0 1.04-.175 1.4-.523.361-.349.542-.79.542-1.326 0-.51-.172-.945-.514-1.306-.342-.361-.806-.542-1.39-.542h-2.371v3.696h2.333zm7.23-6.03h2.52v5.73h.15l4.89-5.73h3.043v.15l-4.835 5.525 5.34 7.541v.15h-3.08l-3.996-5.694-1.512 1.773v3.92h-2.52V6z"
+          fill="white"
+          fill-rule="nonzero"
+        />
+        <g>
+          <circle fill="#5267DF" cx="12.5" cy="12.5" r="12.5" />
+          <path
+            d="M9 9v10l3.54-3.44L16.078 19V9a2 2 0 0 0-2-2H11a2 2 0 0 0-2 2z"
+            fill="#FFF"
+          />
+        </g>
+      </g>
+    </svg>
+  </div>
 
   <nav class="secondary -nav">
-    <ul role="list">
+    <ul role="list" class="flow">
       <li><a href="#features">features</a></li>
       <li><a href="#pricing">pricing</a></li>
       <li><a href="#contact">contact</a></li>
@@ -230,12 +281,10 @@ layout: base
   </nav>
 
   <div class="media">
-    <div>{% icon "icon-facebook" %}</div>
-    <div>{% icon "icon-twitter" %}</div>
+    <span>{% icon "icon-facebook" %}</span>
+    <span>{% icon "icon-twitter" %}</span>
   </div>
-</section>
 
-<footer>
   <p class="attribution">
     Challenge by
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
