--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -72,22 +72,6 @@ button {
   height: 4px;
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  opacity: 0;
-  pointer-events: none;
-}
-
-.overlay.open {
-  opacity: 1;
-  pointer-events: all;
-}
-
 /* Start */
 
 body {
@@ -119,7 +103,8 @@ h4 {
 .container {
   max-width: 1400px;
   padding: 0 2rem;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 section {
@@ -423,4 +408,84 @@ section:not(:first-of-type) {
 
 .footer a:hover {
   opacity: 0.8;
+}
+
+/* mobile nav */
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--clr-neutral-450);
+  opacity: 0;
+  pointer-events: none;
+  z-index: 1000;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  display: flex;
+  flex-direction: column;
+  transition: opacity 0.2s ease;
+}
+
+.overlay.open {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.nav-header {
+  --dir: row;
+}
+
+.overlay .media {
+  margin-top: auto;
+}
+
+.overlay .media > div {
+  display: inline-block;
+}
+
+.overlay .media > div + div {
+  margin-left: 1.5rem;
+}
+
+.nav-header button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background-color: transparent;
+}
+
+.mobile-nav {
+  --border: 2px solid var(--clr-neutral-400);
+  margin-top: 2rem;
+  border-top: var(--border);
+}
+
+.mobile-nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+.mobile-nav a {
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  border-bottom: var(--border);
+  display: block;
+  padding: 1em;
+  font-size: var(--fs-500);
+  transition: background-color 0.2s;
+}
+
+.mobile-nav .btn {
+  margin-top: 1em;
+  border: none;
+  border: 4px solid var(--clr-neutral-300);
+}
+
+.mobile-nav a:hover {
+  background-color: var(--clr-neutral-400);
 }
