--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -17,6 +17,7 @@ $breakpoints: (
   --ff-ss: "Rubik", sans-serif;
 
   --fs-400: 1.125rem;
+  --fs-500: 1.25rem;
   --fs-800: 3rem;
 
   --fw-400: 400;
@@ -27,6 +28,7 @@ $breakpoints: (
 
   --clr-neutral-300: hsl(0, 0%, 97%);
   --clr-neutral-400: hsl(229, 8%, 60%);
+  --clr-neutral-450: hsla(229, 25%, 25%, 0.95);
   --clr-neutral-500: hsl(229, 31%, 21%);
 
   --box-shadow: 0 2px 16px rgba(0, 0, 0, 0.15);
