--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -98,6 +98,16 @@ h4 {
   justify-content: space-between;
   align-items: center;
   flex-direction: var(--dir, column);
+  flex-wrap: var(--wrap, no-wrap);
+}
+
+.split > * {
+  flex-grow: 1;
+  flex-basis: 100%;
+}
+
+.split > * + * {
+  margin: 0 0 0 var(--gap, 1.5em);
 }
 
 .container {
@@ -137,7 +147,7 @@ section:not(:first-of-type) {
 
 .bg-red {
   background-color: var(--clr-secondary);
-  color: white;
+  color: white !important;
 }
 
 .btn {
@@ -155,6 +165,12 @@ section:not(:first-of-type) {
   --dir: row;
   padding-top: 2em;
   padding-bottom: 1em;
+
+  .logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .open-nav-button {
@@ -163,20 +179,48 @@ section:not(:first-of-type) {
   justify-content: center;
   border: none;
   background-color: transparent;
+
+  @include mq(md) {
+    display: none;
+  }
+}
+
+.primary-nav {
+  display: none;
+
+  a {
+    color: var(--clr-neutral-500);
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 1rem;
+  }
+
+  .btn {
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+
+  @include mq(md) {
+    display: block;
+  }
 }
 
 /* hero */
 
 .hero {
   --dir: column-reverse;
-}
 
-.hero .text-box {
-  margin-top: 2em;
-}
+  .text-box {
+    margin-top: 2em;
+  }
 
-.hero .cta-buttons {
-  --dir: row;
+  .cta-buttons {
+    --dir: row;
+  }
+
+  @include mq(lg) {
+    --dir: row;
+  }
 }
 
 .cta-buttons {
@@ -213,16 +257,39 @@ section:not(:first-of-type) {
 
 /* Tabs */
 
-.tabs {
-  --fl: 3rem;
+.section-header {
+  max-width: 550px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.panel .text-box {
-  margin-top: 5rem;
+.features {
+  .tabs {
+    --fl: 3rem;
+    .text-box {
+      --fl: 1.5rem;
+    }
+
+    @include mq(lg) {
+      max-width: 750px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
 
-.tabs .text-box {
-  --fl: 1.5rem;
+.panel {
+  --gap: 0;
+
+  @include mq(lg) {
+    --dir: row;
+    --gap: 3em;
+    text-align: left;
+  }
+
+  .text-box {
+    margin-top: 5rem;
+  }
 }
 
 .tab-buttons > * {
@@ -234,15 +301,28 @@ section:not(:first-of-type) {
   background-color: transparent;
   position: relative;
   transition: all 0.2s;
+
+  @include mq(lg) {
+    border: none;
+    border-bottom: 1px solid var(--clr-neutral-400);
+  }
+}
+
+.tab-buttons {
+  --gap: 0;
+
+  @include mq(lg) {
+    --dir: row;
+  }
 }
 
 .tab-buttons > *:hover {
   background-color: var(--clr-neutral-300);
 }
 
-.tab-buttons > *:not(:last-of-type) {
-  border-bottom: none;
-}
+// .tab-buttons > *:not(:last-of-type) {
+//   border-bottom: none;
+// }
 
 .tab-buttons button.active::after {
   content: "";
@@ -253,6 +333,10 @@ section:not(:first-of-type) {
   left: 50%;
   position: absolute;
   transform: translateX(-50%);
+
+  @include mq(lg) {
+    width: 100%;
+  }
 }
 
 /* CTA */
@@ -265,6 +349,15 @@ section:not(:first-of-type) {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  // --gap: 0;
+  --wrap: wrap;
+
+  @include mq(lg) {
+    --dir: row;
+    --fl: 0em;
+    --gap: 2em;
+    margin-top: 1.5em;
+  }
 }
 
 .card {
@@ -274,20 +367,30 @@ section:not(:first-of-type) {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  --fl: 1.5em;
-}
 
-.card .info span {
-  display: block;
-}
+  @include mq(md) {
+    max-width: 280px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.7em;
+  }
 
-.card .info span:first-of-type {
-  font-weight: var(--fw-500);
-  color: var(--clr-neutral-500);
-}
+  .info span {
+    display: block;
+  }
 
-.card .info span:nth-of-type(2) {
-  font-size: 0.9rem;
+  .info span:first-of-type {
+    font-weight: var(--fw-500);
+    color: var(--clr-neutral-500);
+  }
+
+  .info span:nth-of-type(2) {
+    font-size: 0.9rem;
+  }
+
+  > * + * {
+    margin-top: 1.5em;
+  }
 }
 
 /* FAQ */
@@ -298,34 +401,33 @@ section:not(:first-of-type) {
 
 .questions {
   margin-top: 3em;
-}
 
-.questions button {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  padding: 1em 0.5em;
-  background-color: transparent;
-  border: none;
-  border-bottom: 1px solid var(--clr-neutral-400);
-  transition: background-color 0.2s;
-  stroke: var(--clr-primary);
-}
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 1em 0.5em;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid var(--clr-neutral-400);
+    transition: background-color 0.2s;
+    stroke: var(--clr-primary);
+  }
+  button.close .icon {
+    transform: rotate(180deg);
+    stroke: var(--clr-secondary);
+  }
 
-.questions button.close .icon {
-  transform: rotate(180deg);
-  stroke: var(--clr-secondary);
-}
+  button:hover {
+    background-color: var(--clr-neutral-300);
+  }
 
-.questions button:hover {
-  background-color: var(--clr-neutral-300);
-}
-
-.questions svg {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  svg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 /* Contact */
@@ -334,47 +436,46 @@ section:not(:first-of-type) {
   padding-top: 4em;
   padding-bottom: 2em;
   --fl: 0.5em;
-}
+  h2 {
+    color: inherit;
+  }
 
-.contact h2 {
-  color: inherit;
-}
+  > p:first-of-type {
+    letter-spacing: 4px;
+    text-transform: uppercase;
+  }
 
-.contact > p:first-of-type {
-  letter-spacing: 4px;
-  text-transform: uppercase;
+  .error-message {
+    text-align: left;
+    font-size: 0.9rem;
+    padding: 0.5em;
+    border-bottom-left-radius: var(--br);
+    border-bottom-right-radius: var(--br);
+  }
+
+  .btn {
+    border: 0;
+    margin-top: 1em;
+  }
 }
 
 .contact-form {
   width: 100%;
-}
 
-.contact-form input,
-.contact-form button {
-  width: 100%;
-}
+  input,
+  button {
+    width: 100%;
+  }
 
-.contact-form input {
-  padding: 0.5em;
-  border-radius: var(--br);
-}
+  input {
+    padding: 0.5em;
+    border-radius: var(--br);
+  }
 
-.contact-form input.error {
-  border: 2px solid var(--clr-secondary);
-  border-radius: var(--br) var(--br) 0 0;
-}
-
-.contact .error-message {
-  text-align: left;
-  font-size: 0.9rem;
-  padding: 0.5em;
-  border-bottom-left-radius: var(--br);
-  border-bottom-right-radius: var(--br);
-}
-
-.contact .btn {
-  border: 0;
-  margin-top: 1em;
+  input.error {
+    border: 2px solid var(--clr-secondary);
+    border-radius: var(--br) var(--br) 0 0;
+  }
 }
 
 /* Footer */
@@ -382,32 +483,32 @@ section:not(:first-of-type) {
 .footer {
   padding-top: 1em;
   padding-bottom: 1em;
-}
 
-.footer ul {
-  padding: 0;
-  margin: 0;
-}
+  ul {
+    padding: 0;
+    margin: 0;
+  }
 
-.footer a {
-  font: inherit;
-  text-decoration: none;
-  color: var(--clr-neutral-300);
-  text-transform: uppercase;
-  transition: opacity 0.1s;
-}
+  a {
+    font: inherit;
+    text-decoration: none;
+    color: var(--clr-neutral-300);
+    text-transform: uppercase;
+    transition: opacity 0.1s;
+  }
 
-.footer .media > span + span {
-  margin-left: 2em;
-}
+  .media > span + span {
+    margin-left: 2em;
+  }
 
-.footer .attribution a {
-  text-decoration: underline;
-  text-transform: none;
-}
+  .attribution a {
+    text-decoration: underline;
+    text-transform: none;
+  }
 
-.footer a:hover {
-  opacity: 0.8;
+  a:hover {
+    opacity: 0.8;
+  }
 }
 
 /* mobile nav */
@@ -427,65 +528,65 @@ section:not(:first-of-type) {
   display: flex;
   flex-direction: column;
   transition: opacity 0.2s ease;
-}
 
-.overlay.open {
-  opacity: 1;
-  pointer-events: all;
+  .media {
+    margin-top: auto;
+  }
+
+  .media > div {
+    display: inline-block;
+  }
+
+  .media > div + div {
+    margin-left: 1.5rem;
+  }
+
+  &.open {
+    opacity: 1;
+    pointer-events: all;
+  }
 }
 
 .nav-header {
   --dir: row;
-}
 
-.overlay .media {
-  margin-top: auto;
-}
-
-.overlay .media > div {
-  display: inline-block;
-}
-
-.overlay .media > div + div {
-  margin-left: 1.5rem;
-}
-
-.nav-header button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  background-color: transparent;
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
+  }
 }
 
 .mobile-nav {
   --border: 2px solid var(--clr-neutral-400);
   margin-top: 2rem;
   border-top: var(--border);
-}
 
-.mobile-nav ul {
-  padding: 0;
-  margin: 0;
-}
+  ul {
+    padding: 0;
+    margin: 0;
+  }
 
-.mobile-nav a {
-  color: white;
-  text-transform: uppercase;
-  text-decoration: none;
-  border-bottom: var(--border);
-  display: block;
-  padding: 1em;
-  font-size: var(--fs-500);
-  transition: background-color 0.2s;
-}
+  a {
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-bottom: var(--border);
+    display: block;
+    padding: 1em;
+    font-size: var(--fs-500);
+    transition: background-color 0.2s;
+  }
 
-.mobile-nav .btn {
-  margin-top: 1em;
-  border: none;
-  border: 4px solid var(--clr-neutral-300);
-}
+  .btn {
+    margin-top: 1em;
+    border: none;
+    border: 4px solid var(--clr-neutral-300);
+  }
 
-.mobile-nav a:hover {
-  background-color: var(--clr-neutral-400);
+  a:hover {
+    background-color: var(--clr-neutral-400);
+  }
 }
