--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -67,6 +67,32 @@ button {
   }
 }
 
+section {
+  margin-top: 2em;
+}
+
+section,
+footer {
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+
+section:not(:first-of-type) {
+  margin-top: 7em;
+}
+
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 0.5em 1em;
+  border-radius: var(--br);
+  box-shadow: var(--box-shadow);
+  border: 2px solid var(--border-color, transparent);
+}
+
+/* Utils */
+
 .icon--logo-bookmark {
   width: 128px;
   height: 25px;
@@ -75,28 +101,6 @@ button {
 .icon--bg-dots {
   width: 280px;
   height: 4px;
-}
-
-/* Start */
-
-body {
-  font-family: var(--ff-ss);
-  font-weight: var(--fw-400);
-  text-align: center;
-  font-size: var(--fs-400);
-  color: var(--clr-neutral-400);
-  overflow-x: hidden;
-
-  @include mq(lg) {
-    text-align: left;
-  }
-}
-
-h1,
-h2,
-h3,
-h4 {
-  color: var(--clr-neutral-500);
 }
 
 .hidden {
@@ -127,20 +131,6 @@ h4 {
   margin-right: auto;
 }
 
-section {
-  margin-top: 2em;
-}
-
-section,
-footer {
-  padding-top: 2em;
-  padding-bottom: 2em;
-}
-
-section:not(:first-of-type) {
-  margin-top: 7em;
-}
-
 .flow > * + * {
   /* set default flow size, set to different size where needed */
   margin-top: var(--fl, 1.5em);
@@ -164,676 +154,4 @@ section:not(:first-of-type) {
 .bg-red {
   background-color: var(--clr-secondary);
   color: white;
-}
-
-.btn {
-  display: inline-block;
-  text-decoration: none;
-  cursor: pointer;
-  padding: 0.5em 1em;
-  border-radius: var(--br);
-  box-shadow: var(--box-shadow);
-  border: 2px solid var(--border-color, transparent);
-}
-
-/* header */
-
-.header {
-  --dir: row;
-  padding-top: 2em;
-  padding-bottom: 1em;
-
-  .logo {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-  }
-
-  .open-nav-button {
-    flex-basis: content;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    background-color: transparent;
-
-    @include mq(md) {
-      display: none;
-    }
-  }
-}
-
-.primary-nav {
-  display: none;
-
-  a {
-    color: var(--clr-neutral-500);
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: color 0.1s;
-  }
-
-  a:hover,
-  a:active {
-    color: var(--clr-secondary);
-  }
-
-  .btn {
-    padding-left: 2em;
-    padding-right: 2em;
-    color: white;
-    transition: all 0.1s;
-  }
-
-  .btn:hover,
-  .btn:active {
-    --border-color: var(--clr-secondary);
-    color: var(--clr-secondary);
-    background-color: transparent;
-  }
-
-  @include mq(md) {
-    display: block;
-  }
-}
-
-/* hero */
-
-.hero {
-  --dir: column-reverse;
-
-  .text-box {
-    margin-top: 2em;
-  }
-
-  .cta-buttons {
-    --dir: row;
-  }
-
-  @include mq(lg) {
-    --dir: row;
-  }
-
-  .cta-buttons {
-    max-width: 450px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-
-    .google,
-    .firefox {
-      transition: all 0.1s;
-    }
-
-    .google:hover,
-    .google:active,
-    .firefox:hover,
-    .firefox:active {
-      --fg: var(--clr-primary);
-      --border-color: var(--clr-primary);
-      background-color: transparent;
-      color: var(--fg);
-    }
-
-    .firefox:hover,
-    .firefox:active {
-      --fg: var(--clr-neutral-500);
-      --border-color: var(--clr-neutral-500);
-    }
-
-    @include mq(lg) {
-      margin-left: 0;
-    }
-  }
-}
-
-.illustration {
-  position: relative;
-}
-
-.illustration > div::after {
-  content: "";
-  position: absolute;
-  background-color: var(--clr-primary);
-  top: 20%;
-  height: 80%;
-  width: 300%;
-  z-index: -1;
-}
-
-.illustration > div::after {
-  left: 20%;
-  border-bottom-left-radius: 125px;
-}
-
-.tabs .illustration > div::after {
-  height: 95%;
-  // left: -80%;
-  left: unset;
-  right: 20%;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 125px;
-}
-
-/* Tabs */
-
-.section-header {
-  max-width: 550px;
-  margin-left: auto;
-  margin-right: auto;
-
-  @include mq(lg) {
-    text-align: center;
-  }
-}
-
-.features {
-  .tabs {
-    --fl: 3rem;
-    .text-box {
-      --fl: 1.5rem;
-    }
-  }
-}
-
-.panel {
-  --gap: 0;
-
-  @include mq(lg) {
-    --dir: row;
-    --gap: 3em;
-    text-align: left;
-  }
-
-  .text-box {
-    margin-top: 5rem;
-  }
-}
-
-.tab-buttons > * {
-  width: 100%;
-  border: 1px solid var(--clr-neutral-400);
-  border-left: none;
-  border-right: none;
-  padding: 0.5em 0;
-  background-color: transparent;
-  position: relative;
-  transition: all 0.2s;
-
-  @include mq(lg) {
-    border: none;
-    border-bottom: 1px solid var(--clr-neutral-400);
-  }
-}
-
-.tab-buttons {
-  --gap: 0;
-
-  @include mq(lg) {
-    --dir: row;
-    max-width: 750px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.tab-buttons > *:hover {
-  color: var(--clr-secondary);
-}
-
-.tab-buttons button[aria-selected="true"]::after {
-  content: "";
-  width: 40%;
-  height: 4px;
-  background-color: var(--clr-secondary);
-  bottom: 0;
-  left: 50%;
-  position: absolute;
-  transform: translateX(-50%);
-
-  @include mq(lg) {
-    width: 100%;
-  }
-}
-
-/* CTA */
-
-.cta header {
-  --fl: 0.5em;
-}
-
-.cards {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  --wrap: wrap;
-
-  @include mq(lg) {
-    --dir: row;
-    --fl: 0em;
-    --gap: 2em;
-    margin-top: -2.5em;
-  }
-}
-
-.card {
-  box-shadow: var(--box-shadow);
-  padding: 2rem 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  &:nth-of-type(2) {
-    @include mq(xl) {
-      margin-top: 7rem;
-    }
-  }
-
-  &:nth-of-type(3) {
-    @include mq(xl) {
-      margin-top: 14rem;
-    }
-  }
-
-  .btn {
-    transition: all 0.2s;
-  }
-
-  .btn:hover,
-  .btn:active {
-    background-color: transparent;
-    color: var(--clr-primary);
-    --border-color: var(--clr-primary);
-  }
-
-  @include mq(md) {
-    max-width: 280px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0.7em;
-  }
-
-  .info span {
-    display: block;
-  }
-
-  .info span:first-of-type {
-    font-weight: var(--fw-500);
-    color: var(--clr-neutral-500);
-  }
-
-  .info span:nth-of-type(2) {
-    font-size: 0.9rem;
-  }
-
-  > * + * {
-    margin-top: 1.5em;
-  }
-}
-
-/* FAQ */
-
-.faq {
-  max-width: 550px;
-  margin-left: auto;
-  margin-right: auto;
-
-  .btn {
-    margin-top: 2em;
-  }
-
-  .btn {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    max-width: 120px;
-    text-align: center;
-  }
-}
-
-.questions {
-  margin-top: 3em;
-
-  .answer {
-    margin-top: 0.5em;
-    text-align: left;
-  }
-
-  button {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 1em 0.5em;
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid var(--clr-neutral-400);
-    transition: color 0.2s;
-    stroke: var(--clr-primary);
-
-    > * {
-      pointer-events: none;
-    }
-
-    .icon {
-      transition: transform 0.1s;
-      path {
-        transition: stroke 0.1s;
-      }
-    }
-
-    .icon.open {
-      transform: rotate(180deg);
-
-      path {
-        stroke: var(--clr-secondary);
-      }
-    }
-  }
-
-  button.close .icon {
-    transform: rotate(180deg);
-    stroke: var(--clr-secondary);
-  }
-
-  button:hover {
-    color: var(--clr-secondary);
-  }
-
-  svg {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-/* Contact */
-
-.contact {
-  padding-top: 2em;
-  padding-bottom: 2em;
-
-  h2 {
-    color: inherit;
-  }
-
-  p {
-    letter-spacing: 4px;
-    text-transform: uppercase;
-  }
-
-  .form-group {
-    position: relative;
-  }
-
-  .error-message {
-    position: absolute;
-    bottom: -36px;
-    left: 0;
-    letter-spacing: unset;
-    text-align: left;
-    font-size: 0.9rem;
-    padding: 0.5em;
-    border-bottom-left-radius: var(--br);
-    border-bottom-right-radius: var(--br);
-  }
-
-  .btn {
-    margin-top: 1em;
-  }
-
-  .contact-text {
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    --fl: 0.5em;
-  }
-
-  .contact-form {
-    width: 100%;
-    max-width: 450px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2em;
-
-    @include mq(lg) {
-      display: flex;
-      // align-items: center;
-
-      > div {
-        flex-basis: 200%;
-      }
-
-      > button {
-        margin-top: 0;
-      }
-
-      > * + * {
-        margin-left: 0.7em;
-      }
-    }
-
-    input,
-    button {
-      width: 100%;
-    }
-
-    button:hover {
-      background-color: white;
-      color: var(--clr-secondary);
-      --border-color: var(--clr-secondary);
-    }
-
-    input {
-      padding: 0.5em;
-      border-radius: var(--br);
-    }
-
-    input.error {
-      border: 2px solid var(--clr-secondary);
-      border-radius: var(--br) var(--br) 0 0;
-    }
-  }
-}
-
-/* Footer */
-
-.footer {
-  padding-top: 1em;
-  padding-bottom: 1em;
-  text-align: center;
-  font-size: 0.9rem;
-
-  @include mq(lg) {
-    text-align: left;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    padding-bottom: 0;
-
-    .logo {
-      display: inline-block;
-
-      > * {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    }
-
-    .secondary-nav {
-      display: inline-block;
-      margin-top: 0;
-    }
-
-    .fl {
-      display: flex;
-      width: 50%;
-      grid-column: 1 / span 1;
-    }
-  }
-
-  ul {
-    padding: 0;
-    margin: 0;
-    @include mq(lg) {
-      display: flex;
-
-      margin-left: 2em;
-
-      > * {
-        margin-top: 0;
-        align-self: flex-start;
-      }
-
-      > * + * {
-        margin-left: 1em;
-      }
-    }
-  }
-
-  a {
-    font: inherit;
-    text-decoration: none;
-    color: var(--clr-neutral-300);
-    text-transform: uppercase;
-    transition: opacity 0.1s;
-    line-height: 0;
-    transition: color 0.1s;
-  }
-
-  a:hover,
-  a.active {
-    color: var(--clr-secondary);
-  }
-
-  .media {
-    path {
-      transition: fill 0.1s;
-    }
-
-    span {
-      cursor: pointer;
-    }
-
-    span:hover path {
-      fill: var(--clr-secondary);
-    }
-
-    @include mq(lg) {
-      grid-column: 2 / span 1;
-      margin-top: 0;
-      justify-self: end;
-    }
-
-    > span + span {
-      margin-left: 2em;
-    }
-  }
-
-  .attribution {
-    font-size: 1rem;
-    @include mq(lg) {
-      grid-column: 1 / -1;
-      justify-self: center;
-    }
-  }
-
-  .attribution a {
-    text-decoration: underline;
-    text-transform: none;
-  }
-
-  a:hover {
-    opacity: 0.8;
-  }
-}
-
-/* mobile nav */
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--clr-neutral-450);
-  opacity: 0;
-  pointer-events: none;
-  z-index: 1000;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  display: flex;
-  flex-direction: column;
-  transition: opacity 0.2s ease;
-
-  .media {
-    margin-top: auto;
-  }
-
-  .media > div {
-    display: inline-block;
-  }
-
-  .media > div + div {
-    margin-left: 1.5rem;
-  }
-
-  &.open {
-    opacity: 1;
-    pointer-events: all;
-  }
-}
-
-.nav-header {
-  --dir: row;
-
-  .logo {
-    flex-grow: 0;
-    flex-basis: content;
-  }
-
-  button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    background-color: transparent;
-    flex-basis: content;
-    flex-grow: 0;
-  }
-}
-
-.mobile-nav {
-  --border: 2px solid var(--clr-neutral-400);
-  margin-top: 2rem;
-  border-top: var(--border);
-
-  ul {
-    padding: 0;
-    margin: 0;
-  }
-
-  a {
-    color: white;
-    text-transform: uppercase;
-    text-decoration: none;
-    border-bottom: var(--border);
-    display: block;
-    padding: 1em;
-    font-size: var(--fs-500);
-    transition: background-color 0.2s;
-  }
-
-  .btn {
-    margin-top: 1em;
-    border: none;
-    border: 4px solid var(--clr-neutral-300);
-  }
-
-  a:hover {
-    background-color: var(--clr-neutral-400);
-  }
 }
